# hazell

./: ChangeLog.md  README.md  hazell.cabal  package.yaml  stack.yaml
.github/workflows/: test.yaml
app/: Main.hs
example/: BUILD.bazel  WORKSPACE
src/: Hazell.hs
src/Bazel/: Build.hs  Cabal.hs  Haskell.hs  Parser.hs  Rule.hs  Workspace.hs
src/Bazel/Haskell/: StackSnapshot.hs
src/Hazell/: Env.hs
test/: Helper.hs  Spec.hs
test/Spec/Bazel/: Build.hs  Parser.hs  Rule.hs
