# Set all target’s visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

load(
    "//:build/common.bzl",
    "GHC_FLAGS",
)

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
)

haskell_library(
    name = "hazell-library",
    src_strip_prefix = "src",
    srcs = glob(["src/**/*.hs"]),
    deps = [
        "@stackage//:Cabal",
        "@stackage//:aeson",
        "@stackage//:base",
        "@stackage//:containers",
        "@stackage//:deriving-aeson",
        "@stackage//:hpack",
        "@stackage//:http-client",
        "@stackage//:http-client-tls",
        "@stackage//:http-types",
        "@stackage//:megaparsec",
        "@stackage//:prettyprinter",
        "@stackage//:rio",
    ],
    compiler_flags = ["-DDATA_FILE=\"hoge.txt\""] + GHC_FLAGS,
)
